--- a/shareMeUser/index.html
+++ b/shareMeUser/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
+<meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests" />
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
